syntax = "proto3";

package io.harness.pms.contracts.ambiance;

option java_multiple_files = true;

import "io/harness/pms/contracts/steps/step_type.proto";
import "google/protobuf/timestamp.proto";

message Level {
  string setupId = 1;
  string runtimeId = 2;
  string identifier = 3;
  io.harness.pms.contracts.steps.StepType stepType = 4;
  string group = 5;
  int32 retryIndex = 6;
  bool skipExpressionChain = 7;
  int64 startTs = 8;
  int64 endTs = 9;
}